--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,250 @@
-.App {
+body, html{
+  margin: 0px;
+  padding: 0px;
+}
+.box{
+  margin-top: 100px;
+  margin-left: 30px;
+  height: 200px;
+  width: 400px;
+}
+.feedcast-player{
+  background-color: #132538;
+  height: 100%
+}
+.fc-player{
+  position: relative;
+}
+.fc-player,
+.fc-player__wrapper,
+.fc-player__time-range,
+.fc-player__controls {
+  width: 100%;
+}
+.fc-player__controls {
+  height: auto;
+  box-sizing: border-box;
+  display: inline-block;
+  padding: 10px;
+}
+.fc-player__time-range{
+  display: inline-block;
+  background-color: #2C3E50
+}
+.fc-player__time-range > * {
+  display: inline-block;
+  height: 40px;
+  line-height: 3.5em;
+  float: left;
+  font-size: 13px;
+}
+.fc-player__slide {
+  cursor: pointer;
+  width: calc(100% - 170px);
+  margin-left: 10px;
+  z-index:10;
+}
+.fc-player__time {
+  width: 150px;
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
   color: white;
 }
 
-.App-intro {
-  font-size: large;
+.fc-player__buffered{
+  height: 2px;
+  position: absolute;
+  left: 10px;
+  background: #ccc;
+  z-index: 1;
+  top: 21px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.fc-player__played{
+  height: 2px;
+  position: absolute;
+  left: 10px;
+  background: #4285F4;
+  z-index: 2;
+  top: 21px;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  background: none
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px rgba(0,0,0,0);
+  background: rgba(255,255,255,.4);
+  border-radius: 1px;
+  border: 0px;
+  z-index:10;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #4285F4;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #4285F4;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -4.5px;
+  z-index:10;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(255,255,255,.4);
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: rgba(255,255,255,.4);
+  border-radius: 1px;
+  border: 0px solid #000000;
+  z-index:10;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #4285F4;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #4285F4;
+  cursor: pointer;
+  z-index:10;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 2px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+  z-index:10;
+}
+input[type=range]::-ms-fill-lower {
+  background: #E6DFDF;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+  z-index:10;
+}
+input[type=range]::-ms-fill-upper {
+  background: #E6DFDF;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+  z-index:10;
+}
+input[type=range]::-ms-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #4285F4;
+  height: 10px;
+  width: 10px;
+  border-radius: 5px;
+  background: #4285F4;
+  cursor: pointer;
+  z-index:10;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #E6DFDF;
+  z-index:10;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #E6DFDF;
+  z-index:10;
+}
+
+.fc-player__button-play,
+.fc-player__button-pause,
+.fc-player__backward,
+.fc-player__forward,
+.fc-player__speed button,
+.fc-player__speed a
+{
+  background: #2C3E50;
+  color: white;
+  cursor: pointer;
+  margin: 5px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  outline: 0px;
+  border: 0px;
+}
+.fc-player__backward,
+.fc-player__forward{
+  width: 35px;
+  height: 35px;
+}
+.fc-player__tooltip{
+  position: absolute;
+  top: -15px;
+  width: 50px;
+  height: 25px;
+  line-height: 25px;
+  text-align: center;
+  color: white;
+  background: #000;
+  transform: translateX(-16px);
+}
+.fc-player__tooltip:after{
+  content: ' ';
+  position: absolute;
+  bottom: -10px;
+  width: 1px;
+  height: 1px;
+  border: 5px solid transparent;
+  border-top: 5px solid black;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.fc-player__volume {
+  color: white;
+  width: 80px;
+  padding-left: 26px;
+  padding-right: 10px;
+  position: relative;
+  float: right;
+  height: 28px;
+  background: #2C3E50;
+  margin-top: 14px;
+  border-radius: 5px;
+}
+.fc-player__volume i {
+  position: absolute;
+  left: 9px;
+  top: 5px;
+}
+.fc-player__volume-slider {
+  width: 100%
+}
+.fc-player__speed {
+  float: right;
+  margin: 7px 20px;
+}
+.fc-player__speed button,
+.fc-player__speed a {
+  width: 30px;
+  height: 30px;
+  display: inline-block;
+  line-height: 30px;
+  text-align: center;
+}
+.fc-player__speed button.active {
+  background: rgba(255,255,255,.6);
+  color: #2C3E50;
+  font-weight: bolder
 }
