--- a/src/Player.css
+++ b/src/Player.css
@@ -30,6 +30,7 @@
   display: inline-block !important;
   background-color: #fafafa !important;
 }
+
 .fc-player__time-range > .fc-player__time,
 .fc-player__time-range > input
 {
@@ -333,7 +334,7 @@
   background-position: center center !important;
   width: 100% !important;
 }
-.fc-player__header:before, .fc-player__header:after  {
+.fc-player__header:before{
   content: ' ';
   display: block;
   position: absolute;
@@ -347,6 +348,20 @@
   background: -moz-linear-gradient(black, rgba(0,0,0,0)); /* For Firefox 3.6 to 15 */
   background: linear-gradient(black, rgba(0,0,0,0)); /* Standard syntax (must be last) */
   z-index: 10;
+}
+.fc-player__header:after  {
+  content: ' ';
+  display: block;
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+  width: 100%;
+  height: 85px;
+  background: black; /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(rgba(0,0,0,0), black); /* For Safari 5.1 to 6.0 */
+  background: -o-linear-gradient(rgba(0,0,0,0), black); /* For Opera 11.1 to 12.0 */
+  background: -moz-linear-gradient(rgba(0,0,0,0), black); /* For Firefox 3.6 to 15 */
+  background: linear-gradient(rgba(0,0,0,0), black); /* Standard syntax (must be last) */
 }
 
 
@@ -381,3 +396,64 @@
   -webkit-filter: invert(100%);
   filter: invert(100%);
 }*/
+
+
+
+.fc-player__time-range--has-cover,
+.fc-player__controls--has-cover {
+  position:absolute !important;
+}
+.fc-player__time-range--has-cover{
+  background-color: transparent !important;
+  bottom: 43px
+}
+.fc-player__time-range--has-cover .fc-player__time{ color: white !important; }
+.fc-player__controls--has-cover {
+  bottom: 0px !important;
+  padding: 0px !important;
+}
+
+
+.fc-player--has-cover input[type=range] {
+  -webkit-appearance: none !important;
+  background: none !important;
+}
+.fc-player--has-cover input[type=range]:focus {
+  outline: none !important;
+}
+.fc-player--has-cover input[type=range]::-webkit-slider-runnable-track {
+  width: 100% !important;
+  height: 2px !important;
+  cursor: pointer !important;
+  animate: 0.2s !important;
+  box-shadow: 0px 0px 0px rgba(0,0,0,0) !important;
+  background: rgba(255,255,255,.5) !important;
+  border-radius: 1px !important;
+  border: 0px !important;
+  z-index:10 !important;
+}
+.fc-player--has-cover input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(255,255,255,.5) !important;
+}
+.fc-player--has-cover input[type=range]::-moz-range-track {
+  width: 100% !important;
+  height: 2px !important;
+  cursor: pointer !important;
+  animate: 0.2s !important;
+  box-shadow: 0px 0px 0px #000000 !important;
+  background: rgba(255,255,255,.5) !important;
+  border-radius: 1px !important;
+  border: 0px solid #000000 !important;
+  z-index:10 !important;
+}
+
+.fc-player__controls--has-cover button,
+.fc-player__controls--has-cover a,
+.fc-player__controls--has-cover .fc-player__volume {
+  color: white !important;
+  background-color: transparent !important;
+}
+.fc-player__controls--has-cover button.active{
+  background-color: rgba(255,255,255,.7) !important;
+  color: #000 !important;
+}
