refactor: Move files do jsx and create sub-components

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -8,6 +8,8 @@
   height: 100% !important;
   box-sizing: border-box !important;
   min-width: 310px !important;
+}
+.fc-player--has-cover{
   overflow: hidden !important;
 }
 .fc-player{
