--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,6 +14,7 @@
 }
 .fc-player{
   position: relative !important;
+  height: 100% !important
 }
 .fc-player,
 .fc-player__wrapper,
@@ -340,6 +341,8 @@
   background-repeat: no-repeat !important;
   background-position: center center !important;
   width: 100% !important;
+  min-height: 370px !important;
+  height: 100% !important;
 }
 .fc-player__header:before{
   content: ' ';
@@ -412,7 +415,8 @@
 }
 .fc-player__time-range--has-cover{
   background-color: transparent !important;
-  bottom: 43px
+  bottom: 43px;
+  height: 43px;
 }
 .fc-player__time-range--has-cover .fc-player__time{ color: white !important; }
 .fc-player__controls{
@@ -651,4 +655,8 @@
     width: calc(100% - 176px);
     height: 50px;
     opacity: .9;
+}
+.fc-player__canvas--mobile {
+  left: 0px;
+  width: 100% !important;
 }
