--- a/src/css/App.css
+++ b/src/css/App.css
@@ -702,3 +702,11 @@
   height: 30px;
   cursor: pointer;
 }
+.fc-player__canvas-countdown-background {
+  position: absolute;
+  top:0px;
+  left:0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.7);
+}
